# purdys-scraper

./: .gitignore  Makefile  README.md  diff.py  main.py  pyproject.toml
data/: 2025-08-26.json
