[project]
name = "purdys-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "parsel>=1.10.0",
]

[dependency-groups]
dev = [
    "mypy>=1.17.1",
]

[tool.pyright]
reportMissingImports = "warning"
